syntax = "proto3";

package pb;

option go_package = "./;pb";

message ResourceLimit{
  string cpu = 1;
  string memory = 2;
  string Storage = 3;
}

message WorkspaceInfo {
  string sid = 1;
  string uid = 2;
  string image = 3;
  int32 port =4;
  string volumeMountPath = 5;
  ResourceLimit resourcelimit = 6;
}

message Response {
  int32 status = 1;
  string message = 2;
}

message QueryOption {
  string name = 1;
  string namespace = 2;
}

message WorkspaceStatus {
  int32 status = 1;
  string message = 2;
}

message WorkspaceRunningInfo {
  string nodeName = 1;
  string ip = 2;
  int32 port = 3;
}

message RunningSpacesRequest {
  string uid=1;
}

message RunningSpacesList {
  enum Status {
    Success = 0;
    NotFound = 1;
  }

  message WorkspaceBasicInfo {
    string sid = 1;
    string name = 2;
  }

  repeated WorkspaceBasicInfo workspaces = 1;
}

service CCPService {
  rpc createSpace(WorkspaceInfo) returns (WorkspaceRunningInfo);

  rpc startSpace(WorkspaceInfo) returns (WorkspaceRunningInfo);

  rpc deleteSpace(QueryOption) returns (Response);

  rpc stopSpace(QueryOption) returns (Response);

  rpc getPodSpaceStatus(QueryOption) returns (WorkspaceStatus);

  rpc getPodSpaceInfo(QueryOption) returns (WorkspaceRunningInfo);

  rpc getRunningWorkspaces(RunningSpacesRequest) returns (RunningSpacesList);
}